fix: openapi 형식 불일치 문제 및 base url 수정
